--- a/ws-locusta/LocustaMapActivityMain/res/layout/activity_locusta_map.xml
+++ b/ws-locusta/LocustaMapActivityMain/res/layout/activity_locusta_map.xml
@@ -14,4 +14,13 @@
     />
     <!-- keytool -list -alias androiddebugkey -keystore debug.keystore -storepass android -keypass android -->
 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Button" 
+        android:onClick="speakBtnClicked"/>
+
 </RelativeLayout>
